@@ -2,32 +2,46 @@ package com.cts.security;
 
 import io.jsonwebtoken.*;
 import io.jsonwebtoken.security.Keys;
+import jakarta.annotation.PostConstruct;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import java.nio.charset.StandardCharsets;
 import java.security.Key;
-import java.util.*;
+import java.util.Date;
+import java.util.List;
 import java.util.stream.Collectors;
 
 @Component
 public class JwtUtil {
 
-    private final Key key;
-    private final long expirationMs;
+    private Key key;
 
-    public JwtUtil(@Value("${security.jwt.secret}") String secret,
-                   @Value("${security.jwt.expiration-ms:3600000}") long expirationMs) {
-        if (secret == null || secret.length() < 7) {
-            throw new IllegalArgumentException("JWT secret must be at least 7 characters long");
+    @Value("${security.jwt.secret:}")
+    private String jwtSecret;
+
+    @Value("${security.jwt.expiration-ms:3600000}")
+    private long jwtExpirationMs;
+
+    @PostConstruct
+    public void init() {
+        if (jwtSecret == null || jwtSecret.trim().isEmpty()) {
+            // Fail fast to avoid running with an insecure default secret.
+            throw new IllegalStateException("JWT secret is not configured. Export environment variable JWT_SECRET or set security.jwt.secret.");
         }
-        this.key = Keys.hmacShaKeyFor(secret.getBytes(StandardCharsets.UTF_8));
-        this.expirationMs = expirationMs;
+        // Use HMAC-SHA key derived from secret bytes. Secret should be at least 256-bit (32 bytes).
+        this.key = Keys.hmacShaKeyFor(jwtSecret.getBytes(StandardCharsets.UTF_8));
     }
 
-    public String generateToken(String username, Collection<String> roles) {
+    public String generateToken(org.springframework.security.core.Authentication authentication) {
+        String username = ((org.springframework.security.core.userdetails.User) authentication.getPrincipal()).getUsername();
+        List<String> roles = authentication.getAuthorities().stream()
+                .map(a -> a.getAuthority())
+                .collect(Collectors.toList());
+
         Date now = new Date();
-        Date expiry = new Date(now.getTime() + expirationMs);
+        Date expiry = new Date(now.getTime() + jwtExpirationMs);
+
         return Jwts.builder()
                 .setSubject(username)
                 .claim("roles", roles)
@@ -37,27 +51,39 @@ public class JwtUtil {
                 .compact();
     }
 
-    public boolean validateToken(String token) {
-        try {
-            Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token);
-            return true;
-        } catch (JwtException | IllegalArgumentException ex) {
-            return false;
-        }
-    }
-
     public String getUsernameFromToken(String token) {
-        Claims claims = Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token).getBody();
-        return claims.getSubject();
+        return parseClaims(token).getSubject();
     }
 
     @SuppressWarnings("unchecked")
     public List<String> getRolesFromToken(String token) {
-        Claims claims = Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token).getBody();
+        Claims claims = parseClaims(token);
         Object rolesObj = claims.get("roles");
         if (rolesObj instanceof List) {
             return ((List<?>) rolesObj).stream().map(Object::toString).collect(Collectors.toList());
         }
-        return Collections.emptyList();
+        return List.of();
+    }
+
+    public boolean validateToken(String token) {
+        try {
+            parseClaims(token);
+            return true;
+        } catch (JwtException | IllegalArgumentException ex) {
+            // token is invalid/expired/malformed
+            return false;
+        }
+    }
+
+    private Claims parseClaims(String token) {
+        return Jwts.parserBuilder()
+                .setSigningKey(key)
+                .build()
+                .parseClaimsJws(token)
+                .getBody();
+    }
+
+    public long getJwtExpirationMs() {
+        return jwtExpirationMs;
     }
 }
